# IBI

./: .gitignore  DEMOS.md  Dockerfile  LICENSE  README.md  STATISTICS_API.md  config-prod.yml  config-template.yml  config.yml  conflict_resolution.py  create_intent_api.py  create_rtr_workflow_api.py  create_whatif_receive_api.py  create_whatif_send_api.py  delete_command.py  delete_intents.py  delete_intents_elasticsearch.py  docker-compose.dev.yml  docker-compose.gh.yml  docker-compose.prod.yml  docker-compose.yml  get_intents.py  intent_manager.py  put_intents.py  put_whatif.py  pyproject.toml  requirements.txt  send_workflows.py  start.py
.github/: copilot-instructions.md
app/: config.py  config.yml  config_main.yml  config_my.yml  conflict_resolution.py  connect_rtr.py  constants.py  delete_command.py  delete_intents.py  delete_intents_elasticsearch.py  empty_intent_store.py  extract_command.py  find_interface.py  intent_manager.py  main.old.py  main.py  models.py  pipeline.py  policy_configurator.py  policy_store.csv  recommender.py  run_loops.py  run_whatif_loop.py  send_workflows.py  store_intent.py  tests.py  whatif_loop.py
app/data/: store.py  (+1 more)
config/: .prod.yml.un~  config.template.yml  prod.yml  test.yml
demos/: 01_demo3-qos.py  02_demo3-qos.py  03_demo3-security.py  04_demo3-security.py
docs/: ibi_block_diagram.puml  ibi_class_diagram.puml  ibi_component_diagram.puml  mine.puml  sequence.puml
resources/: general_architecture.drawio
tests/: demo6.rest  dte.rest  elastic.rest  gui.rest  iandt.rest  statistics.rest  test_dte_input.py  test_home.py
(+52 files in other folders)
