[project]
name = "horse-ibi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.7.0",
    "certifi==2023.11.17",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "elasticsearch>=9.0.2",
    "fastapi>=0.115.13",
    "flask==3.0.1",
    "idna==3.6",
    "itsdangerous==2.1.2",
    "jinja2==3.1.3",
    "markupsafe==2.1.4",
    "mysql-connector>=2.2.9",
    "pandas>=2.3.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pyinquirer>=1.0.3",
    "pyyaml>=6.0.2",
    "requests==2.31.0",
    "urllib3==2.1.0",
    "uvicorn>=0.34.3",
    "werkzeug==3.0.1",
]
